fabric/support/test/tests/noble_ui/type_value_no_return.stderr
error: Invalid noble::type_value, expected return type
  --> $DIR/type_value_no_return.rs:18:24
   |
18 |     #[noble::type_value] fn Foo() {}
   |                           ^^
